# psqlpy-piccolo

./: .pre-commit-config.yaml  README.md  piccolo_conf.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
psqlpy_piccolo/: __init__.py  engine.py  main.py
tests/: __init__.py  conftest.py  test_extra_node.py  test_nested_transaction.py  test_pool.py  test_transaction.py  test_version_parsing.py
tests/test_apps/mega/: piccolo_app.py  tables.py
tests/test_apps/mega/piccolo_migrations/: mega_2024_07_20t20_40_36_665178.py
tests/test_apps/music/: piccolo_app.py  tables.py
tests/test_apps/music/piccolo_migrations/: music_2024_07_20t20_45_48_937230.py  music_2024_07_22t21_13_06_549001.py
